[package]
name = "lambert_w"
version = "0.4.0"
edition = "2021"
authors = ["Johanna Sörngård <jsorngard@gmail.com>"]
categories = ["mathematics"]
keywords = ["lambert_w", "product_log", "omega_function"]
description = "Fast and accurate evaluation of the Lambert W function by the method of T. Fukushima."
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JSorngard/lambert_w"

[dependencies]
fast_polynomial = { version = "0.2", default-features = false }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
default = ["24bits", "50bits", "std"]
# Enables the more accurate function versions with 50 bits of accuracy.
50bits = []
# Enables the faster function versions with 24 bits of accuracy.
24bits = []

std = ["fast_polynomial/std"]
libm = ["fast_polynomial/libm"]

[package.metadata.docs.rs]
# Document all features.
all-features = true

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "lambert_benches"
harness = false
